--- a/Baha'i/Others/ROB/V4/p001-010Ch01.html
+++ b/Baha'i/Others/ROB/V4/p001-010Ch01.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="Notes-Foreward.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p011-032Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -38,7 +38,7 @@
 	   The departure of Bahá'u'lláh from the prison-city in June 1877 and His transfer to the Mansion of Mazra'ih, a beautiful summer residence of 'Abdu'lláh Páshá in the quiet countryside north of 'Akká, constitute a turning-point in the fortunes of His Ministry. The building at Mazra'ih stood in the middle of a garden, situated on a vast plain. From one side the view was of the Galilee hills and from the other, the sea. One room on the ground floor was used as a reception room by Bahá'u'lláh, and many of the believers attained His presence there. His own room was on the upper floor with a nearby balcony* overlooking beautiful countryside.<p>
 	   'Abdu'l-Bahá, His Mother the saintly Navváb, and His cherished sister the Greatest Holy Leaf all stayed behind in 'Akká. They visited Bahá'u'lláh from time to time, especially the Master, who attained His presence whenever He could.<p>
 	   <b>The Life of 'Abdu'l-Bahá in 'Akká</b><p>
-	   'Abdu'l-Bahá's main reason for not joining His Beloved Father at Mazra'ih and later at the Mansion of Bahjí was the staggering weight of cares and responsibilities which He had taken upon Himself ever since the days of Adrianople in order to relieve Bahá'u'lláh of the burden of having to attend to daily affairs. In
+	   'Abdu'l-Bahá's main reason for not joining His Beloved Father at Mazra'ih and later at the Mansion of Bahjí was the staggering weight of cares and responsibilities which He had taken upon Himself ever since the days of Adrianople in order to relieve Bahá'u'lláh of the burden of having to attend to daily affairs. In 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p1">1</a></center><p>
@@ -155,21 +155,24 @@
        <td>
 	   Hájí Muhammad-Táhir-i-Málmírí* attained the presence of Bahá'u'lláh around 1878-9. When asked by the friends to describe His impressions of the Blessed Beauty, he always recited in answer a Persian poem:<p>
 	   <blockquote><blockquote>
-	   And wonder at the vision I have dreamed,<br>
-	   A secret by my muted tongue concealed;<br>
+	   And wonder at the vision I have dreamed,<br> 
+	   A secret by my muted tongue concealed;<br> 
 	   Beauty that is beyond the poet's word<br>
 	   By an unhearing world remains unheard.
 	   </blockquote></blockquote>
 	   The same believer has left to posterity an account of one of the feasts at which he had the honour to be present. These are his words recorded in his memoirs:<p>
 	   <blockquote>
 	   In the spring season Bahá'u'lláh used to stay at Mazra'ih for some time.† Mazra'ih is situated at a distance of about two farsangs [about 12 kilometres] from the city of 'Akká. To attain His presence I used to go to Mazra'ih in the daytime and at night I stayed at the Pilgrim House. On the first day of the Ayyám-i-Há [Intercalary days] one of the pilgrims had invited Bahá'u'lláh and all the believers in 'Akká to lunch. I too went to Mazra'ih. Early in the morning a large tent was pitched in front of the entrance to the garden on a delightful open space. That morning all the believers, numbering almost two hundred, consisting of those who were living in the Holy Land and the pilgrims, came to Mazra'ih.<p>
-	   Around the time of noon, the Blessed Beauty came down from the Mansion and majestically entered the tent. All the believers were standing in front of the tent. Then Mírzá Áqá Ján, standing in the presence of Bahá'u'lláh chanted a dawn prayer for fasting which had been revealed on that day. When the prayer was finished the Blessed Beauty instructed all to be seated. Every person sat down in the place where he was standing. His blessed Person spoke to us and after His utterances were ended He asked, 'What happened to the Feast, is it really going to happen?' Thereupon a few friends hurried away and soon lunch was brought in. They placed a low table
+	   Around the time of noon, the Blessed Beauty came down from the Mansion and majestically entered the tent. All the believers were standing in front of the tent. Then Mírzá Áqá Ján, standing in the presence of Bahá'u'lláh chanted a dawn prayer for fasting which had been revealed on that day. When the prayer was finished the Blessed Beauty instructed all to be seated. Every person sat down in the place where he was standing. His blessed Person spoke to us and after His utterances were ended He asked, 'What happened to the Feast, is it really going to happen?' Thereupon a few friends hurried away and soon lunch was brought in. They placed a low table 
 	   </blockquote>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p9">9</a></center><p>
 	   * The father of the present author. For a story of his life see vol. <a href="../V1/p351-363Index.html#Muhammad-Táhir-i-Málmírí,Hájí">1</a>.<p>
 	   † Bahá'u'lláh did not live at Mazra'ih or Bahjí all the time. He used to go and stay in 'Akká sometimes; for details see below, p. <a href="p103-117Ch07.html#p105">105</a>.
+	   <hr>
+	   <hr>
+	   [Fast] <a href="../../../Baha/KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p001-094.html#para39">p. 39</a>-40; <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../../../Baha/PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../../../Baha/GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../V4/p001-010Ch01.html#p9">p. 9</a>
 	   </small></td>
 </tr>
 <tr>
@@ -190,7 +193,7 @@
        <td>
 	   	   <FORM ACTION="Notes-Foreward.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -198,12 +201,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p011-032Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
