--- a/Baha'i/Others/ROB/V4/p011-032Ch02.html
+++ b/Baha'i/Others/ROB/V4/p011-032Ch02.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p001-010Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p033-049Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -40,7 +40,11 @@
 	   The motive for undertaking this unusual task, which at first seemed impossible, was a deep sense of love for Bahá'u'lláh, a love which knew no bounds. The friends desired to offer Him an earthly gift of beauty which they knew He enjoyed so much. They went so far as to bring to 'Akká the plant of a rare white rose
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p11">11</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p11">11</a></center><p>
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -70,7 +74,7 @@
 	   <hr>
 	   1. Psalms 46:4 and 5.<p>
 	   2. Isaiah 33:21.<p>
-	   3. The story of Hájí Yahúdá was given to the present writer by his nephew Mr Nusrat'u'lláh Majzub.
+	   3. The story of Hájí Yahúdá was given to the present writer by his nephew Mr Nusrat'u'lláh Majzub. 
 	   </small></td>
 </tr>
 <tr>
@@ -116,9 +120,9 @@
 	   We send greetings to His loved ones, and supplicate for each one of them that which is worthy of mention and is acceptable in His presence. Peace be upon thee, and upon God's sincere servants. Praise be to Him, the Lord of all mankind.<p>
 	   </blockquote>
 	   Rádíyih, who is mentioned in this Tablet, was a sister of Munírih Khánum, the wife of 'Abdu'l-Bahá. The dinner was given on behalf of her husband who was not present at the time. He was her cousin Siyyid 'Alí, the only son of Mírzá Hádí, a distinguished Bábí, and the illustrious Shams-i-Duhá.<p>
-	   Mírzá Hádí, an uncle of the King of Martyrs and the Beloved of Martyrs,† became an ardent believer in the early days of the Faith. He was present at the Conference of Badasht, suffered persecutions, was attacked in that vicinity and died there. His wife Shams-i-Duhá, a close companion of Táhirih, was described by 'Abdu'l-Bahá as the 'eloquent and ardent handmaid of God'.<p>
+	   Mírzá Hádí, an uncle of the King of Martyrs and the Beloved of Martyrs,† became an ardent believer in the early days of the Faith. He was present at the Conference of Badasht, suffered persecutions, was attacked in that vicinity and died there. His wife Shams-i-Duhá, a close companion of Táhirih, was described by 'Abdu'l-Bahá as the 'eloquent and ardent handmaid of God'.<p> 
 	   <b>Trustworthiness: 'ornament of the people of Bahá'</b><p>
-	   Other Tablets were revealed in this holy spot. There is a celebrated passage‡ about trustworthiness in which Bahá'u'lláh describes a vision He had in the Garden of Ridván of a Maid of Heaven. This passage appears in the Tablets of Ishráqát, Tarázát and also in a Tablet revealed in honour of Hájí Mírzá Buzurg-i-Afnán,§ one of the illustrious custodians of the House of the Báb in Shíráz. Bahá'u'lláh has often used the symbolic term 'Maid of Heaven' in those of His Tablets which are revealed in the language of imagery. Sometimes, as in this Tablet, Bahá'u'lláh
+	   Other Tablets were revealed in this holy spot. There is a celebrated passage‡ about trustworthiness in which Bahá'u'lláh describes a vision He had in the Garden of Ridván of a Maid of Heaven. This passage appears in the Tablets of Ishráqát, Tarázát and also in a Tablet revealed in honour of Hájí Mírzá Buzurg-i-Afnán,§ one of the illustrious custodians of the House of the Báb in Shíráz. Bahá'u'lláh has often used the symbolic term 'Maid of Heaven' in those of His Tablets which are revealed in the language of imagery. Sometimes, as in this Tablet, Bahá'u'lláh 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p16">16</a></center><p>
@@ -126,6 +130,9 @@
 	   † see below, <a href="p073-090Ch05.html">ch. 5</a>.<p>
 	   ‡ In a Tablet to His Trustee, Hájí Amín, Bahá'u'lláh indicates that a 'Tablet of Trustworthiness' had been revealed in AH 1296 (around An 1879).<p>
 	   § see below, <a href="p429-431Apndx_II.html">Appendix II</a> and p. <a href="p329-350Ch22.html#p333">333</a>.
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -145,7 +152,7 @@
 </tr>
 <tr>
        <td>
-	   believer to become endowed with trustworthiness than to travel all the way on foot and attain His presence. These are His words:<p>
+	   believer to become endowed with trustworthiness than to travel all the way on foot and attain His presence. These are His words:<p> 
 	   <blockquote>Were a man in this day to adorn himself with the raiment of trustworthiness it were better for him in the sight of God than that he should journey on foot towards the holy court and be blessed with meeting the Adored One and standing before His Seat of Glory. Trustworthiness is as a stronghold to the city of humanity, and as eyes to the human temple. Whosoever remaineth deprived thereof shall, before His Throne, be reckoned as one bereft of vision.<small><sup>6</sup></small></blockquote>
 	   In the Tablet of Tarázát Bahá'u'lláh states:<p>
 	   <blockquote>The fourth Taráz concerneth trustworthiness. Verily it is the door of security for all that dwell on earth and a token of glory on the part of the All-Merciful. He who partaketh thereof hath indeed partaken of the treasures of wealth and prosperity. Trustworthiness is the greatest portal leading unto the tranquillity and security of the people. In truth the stability of every affair hath depended and doth depend upon it. All the domains of power, of grandeur and of wealth are illumined by its light.<small><sup>7</sup></small></blockquote>
@@ -158,7 +165,7 @@
        <td VALIGN=top><small><center><a name="p18">18</a></center><p>
 	   <hr>
 	   6. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 25. This English translation is published in <i>Trustworthiness</i>, compilation by the Research Department of the Universal House of Justice, p. 3, no. 12.<p>
-	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para108">p. 37</a>.<p>
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para108">p. 37</a>.<p> 
 	   8. <i>ibid</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para335">pp. 120</a>-21.<p>
 	   9. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para338">p. 121</a>.
 	   </small></td>
@@ -185,16 +192,16 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p20a"></a>
 	   	   <img src="i/20a.jpg" width="425" height="300" border="0" align="middle" ALT="THE RIDVÁN GARDEN">
 	   </H1>
 	   </td>
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p21"></a>
 	   	   <img src="i/21.jpg" width="425" height="600" border="0" align="middle" ALT="THE RIDVÁN GARDEN">
@@ -209,14 +216,14 @@
 	   		  </center>
 	   </small>
 	   </td>
-   </tr>
+   </tr>   
 
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p20"></a>
 	   	   <img src="i/20.jpg" width="313" height="400" border="0" align="middle" ALT="THE RIDVÁN GARDEN">
@@ -233,9 +240,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
-   </tr>
-   <tr>
+	   </td>	  
+   </tr>   
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p22"></a>
 	   	   <img src="i/22.jpg" width="313" height="400" border="0" align="middle" ALT="HÁJÍ MUHAMMAD-I-YAZDÍ">
@@ -248,7 +255,7 @@
 	   </small>
 	   </td>
    </tr>
-
+ 
 </table>
 <p>
 
@@ -274,7 +281,7 @@
 	   and later died. As already mentioned, the other son, Hájí Muhammad, established a business with two other believers in Alexandria. And the youngest son, Ahmad Effendi, was given the honour by 'Abdu'l-Bahá of marrying His youngest daughter.<p>
 	   In the Tablet mentioned above Mírzá Áqá Ján gives the story of the events following Shaykh 'Alí's death in Khartúm. He says that when he died the Persian Consul sent the full account of his assets to the commercial attaché of the Persian Embassy in Cairo who in turn demanded the payment of the death duties required by law. Shaykh 'Alí's younger brother Hájí Muhammad and one of his partners Siyyid 'Alí, who are both praised in this Tablet by Bahá'u'lláh for their trustworthiness, assured the authorities that they would fulfil their obligation in this regard. A number of leading merchants of the city also assured the Persian attaché that the Bahá'ís were trustworthy people and would honour their obligation. This episode coincided with the bombardment of Alexandria by British forces in 1882 when a great part of the city was ruined and the business house of Hájí Muhammad, together with all its goods, was utterly destroyed.<p>
 	   The two men returned to the Holy Land almost penniless. They succeeded, however, in obtaining a sum of money sufficient to pay their debt to the authorities. Siyyid 'Alí travelled to Cairo and although by then the former commercial attaché had been dismissed from his post, he presented the sum of fifty English guineas* to his successor. Both the merchants and the embassy officials were deeply touched by this action. Knowing that the partners' business had been completely wiped out, the commercial attaché at first refused to accept the money. He is reported to have said that this noble act of honesty demonstrated by the Bahá'ís was sufficient for him. However, in the end he took the money and stated that the best reward in this transaction was that the enemies of the Faith were praising the conduct of its followers.<p>
-	   Bahá'u'lláh in this Tablet describes this action by the two
+	   Bahá'u'lláh in this Tablet describes this action by the two 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p24">24</a></center><p>
@@ -285,7 +292,7 @@
        <td>
 	   believers as the king of goodly deeds. He prays that His followers in every land may manifest the spirit of trustworthiness among the people.<p>
 	   The story of Hájí Muhammad would not be complete without referring to one of his noble qualities, namely, his utter obedience to the Centre of the Cause. There was a time when Hájí Muhammad had a business concern in 'Akká. One day he was sitting in his office when the Master arrived with an urgent instruction from Bahá'u'lláh that Hájí Muhammad should immediately proceed to Jaddih (Jiddah) in Arabia. He asked 'Abdu'l-Bahá if he could be permitted to attain the presence of Bahá'u'lláh before departing for Jaddih. The Master told him that there was no time, for the boat was leaving at any minute. Hájí Muhammad at once closed the office, and without even paying a visit to his family boarded the ship which sailed away almost immediately. Once on board, he realized that because of the extraordinary rush, he had not even thought to ask the Master the purpose of his trip to Jaddih. But now it was too late, and he knew that Bahá'u'lláh would guide his steps when he arrived in that city. This is the best example of instant, exact and complete obedience to the command of Bahá'u'lláh.<p>
-	   The journey was fraught with danger because the sea was unusually stormy. The danger of the ship sinking was in everyone's mind except for Hájí Muhammad, who was sure that it would sail safely to its destination because God had given him a mission in Jaddih, the nature of which was as yet unknown to him. Soon after disembarking from the ship, he heard two people speaking in Persian among the crowds. When he approached them he soon found out that they were Bahá'ís. They were Hájí Mírzá Haydar-'Alí, that illustrious follower of Bahá'u'lláh, and his fellow prisoner Husayn-i-Shírází who had been set free from their ten-year imprisonment in Khartúm and were on their way to 'Akká.* They were in need of help and guidance, for this was their first journey to the Holy Land. Hájí Muhammad knew then
+	   The journey was fraught with danger because the sea was unusually stormy. The danger of the ship sinking was in everyone's mind except for Hájí Muhammad, who was sure that it would sail safely to its destination because God had given him a mission in Jaddih, the nature of which was as yet unknown to him. Soon after disembarking from the ship, he heard two people speaking in Persian among the crowds. When he approached them he soon found out that they were Bahá'ís. They were Hájí Mírzá Haydar-'Alí, that illustrious follower of Bahá'u'lláh, and his fellow prisoner Husayn-i-Shírází who had been set free from their ten-year imprisonment in Khartúm and were on their way to 'Akká.* They were in need of help and guidance, for this was their first journey to the Holy Land. Hájí Muhammad knew then 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p25">25</a></center><p>
@@ -299,7 +306,7 @@
 	   These are His words:<p>
 	   <blockquote>If a man were to perform every good work, yet fail in the least scruple to be entirely trustworthy and honest, his good works would become as dry tinder and his failure as a soul-consuming fire. If, on the other hand, he should fall short in all his affairs, yet act with trustworthiness and honesty, all his defects would ultimately be righted, all injuries remedied, and all infirmities healed. Our meaning is that, in the sight of God, trustworthiness is the bedrock of His Faith and the foundation of all virtues and perfections. A man deprived of this quality is destitute of everything. What shall faith and piety avail if trustworthiness be lacking? of what consequence can they be? What benefit or advantage can they confer? Wherefore 'Abdu'l-Bahá counselleth the friends--nay rather, fervently imploreth them--so vigilantly to guard the sanctity of the Cause of God and preserve their own dignity as individuals that all nations shall come to know and honour them for their trustworthiness and integrity. They can render no greater service than this today. To act otherwise would be to take an axe to the root of the Cause of God--we take refuge with God from this heinous transgression and pray that He will protect His loved ones from committing so flagrant a wrong.<small><sup>12</sup></small></blockquote>
 	   In another Tablet to Jináb-i-Ibn-i-Abhar,* one of the Hands of the Cause of God, 'Abdu'l-Bahá states that in their dealings with each other, the believers must uphold the highest standard of honesty and trustworthiness:<p>
-	   <blockquote>You have written on the question of how the friends should proceed in their business dealings with one another. This is a</blockquote>
+	   <blockquote>You have written on the question of how the friends should proceed in their business dealings with one another. This is a</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p26">26</a></center><p>
@@ -337,6 +344,8 @@
 	   † For a brief story of her life see <i>Bahá'í World</i>, vol. VIII, pp. 631-42.<p>
 	   <hr>
 	   15. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para182">p. 63</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../2/p065-106Ch04.html#p95">p. 95</a>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -403,7 +412,7 @@
        <td>
 	   	   <FORM ACTION="p001-010Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -411,12 +420,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p033-049Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
