--- a/Baha'i/Others/ROB/V4/p103-117Ch07.html
+++ b/Baha'i/Others/ROB/V4/p103-117Ch07.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p091-102Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p118-144Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -63,7 +63,7 @@
        <td>
 	   used to go to 'Akká from time to time and stay there for various lengths of time.<p>
 	   Núru'd-Dín-i-Zayn, the son of one of the Apostles of Bahá'u'lláh, Zaynu'l-Muqarrabín, has left to posterity the following account of Bahá'u'lláh's movements in 'Akká and its surrounding areas.<p>
-	   <blockquote>Normally, during the spring, summer and part of the autumn season, the Blessed Perfection resided in the Mansion of Bahjí and the remainder of the year in the city of 'Akká. He used to ride a white donkey. It was called Barq {lightning} because of its ability to move fast. Any time He went from the Mansion to the Garden of Ridván, to Mazra'ih, to the Garden of Junaynih, or to 'Akká, He rode on that donkey, and returned in the same way to the Mansion. On these trips a servant always accompanied Him. Later when Barq died they brought another donkey from Persia...it was called Ra'd {thunder}.<small><sup>3</sup></small></blockquote>
+	   <blockquote>Normally, during the spring, summer and part of the autumn season, the Blessed Perfection resided in the Mansion of Bahjí and the remainder of the year in the city of 'Akká. He used to ride a white donkey. It was called Barq {lightning} because of its ability to move fast. Any time He went from the Mansion to the Garden of Ridván, to Mazra'ih, to the Garden of Junaynih, or to 'Akká, He rode on that donkey, and returned in the same way to the Mansion. On these trips a servant always accompanied Him. Later when Barq died they brought another donkey from Persia...it was called Ra'd {thunder}.<small><sup>3</sup></small></blockquote> 
 	   In a Tablet<small><sup>4</sup></small> Bahá'u'lláh declares that through the power of His sovereignty, He left the prison-city in spite of the Sultán's decree. His footsteps ennobled the Mansion and the Garden of Ridván. But because He had been accustomed to life in the prison-city, He chose to return there from time to time. In several of His Tablets Bahá'u'lláh indicates that through the years He had become attached to calamities and sufferings. In one instance<small><sup>5</sup></small> He declares that He was as fond of sufferings as a lover is of his beloved. In another<small><sup>6</sup></small> He states that He is attached to adversities and afflictions as a suckling child is to his mother's milk or a thirsty one longs for a fount of water.<p>
 	   In a Tablet<small><sup>7</sup></small> written in the words of Mírzá Áqá Ján, His amanuensis, it is stated that it is beyond man to comprehend the ways of God. For instance, Bahá'u'lláh had been to the Garden of Ridván and the Mansion, but on one occasion He said that He preferred to be in the Most Great Prison.<p>
 	   <b>The Arrival of Bahá'u'lláh at Bahjí</b><p>
@@ -77,6 +77,8 @@
 	   5. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 1, p. 302.<p>
 	   6. Unpublished compilation, National Archives Committee, no. 73, p. 338.<p>
 	   7. <i>Má'idiy-i-Ásamání</i>, vol. 8, pp. 147-8.
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -110,7 +112,7 @@
 	   </blockquote>
 	   Circumambulation of the holy places is an act of devotion and love. It is an expression of the individual's humility, submissiveness and adoration toward the Holy Ones. It is also a sign of one's utter dependence on them. We note that the same act takes place in nature. A satellite circles around a planet and is held in orbit by the force of attraction. It originates from, and its very existence depends upon, the planet. There is a special relationship between the two: one acts as the master, the other as a servant.<p>
 	   We have in previous volumes described the greatness of the Revelation of Bahá'u'lláh and the exalted station of its author. It was He at whose advent 'the hearts of the entire company' of God's Messengers and Prophets were proved, 'whose presence' Moses 'hath longed to attain', for 'whose love' the spirit of Jesus 'ascended to heaven', and the Day of whose Revelation 'all the Prophets and the Chosen Ones, and the holy ones have wished to witness'.*<p>
-	   The Author of such a transcendent Revelation has, in many of
+	   The Author of such a transcendent Revelation has, in many of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p108">108</a></center><p>
@@ -138,9 +140,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p110"></a>
 	   	   <img src="i/110.jpg" width="300" height="425" border="0" align="middle" ALT="THE MANSION OF BAHJÍ">
@@ -154,7 +156,7 @@
 	   </small>
 	   </td>
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p111a"></a>
 	   	   <img src="i/111a.jpg" width="300" height="300" border="0" align="middle" ALT="THE MANSION OF BAHJÍ">
@@ -164,8 +166,8 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
-   </tr>
+	   </td>	  
+   </tr>   
    <tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="p111b"></a>
@@ -183,8 +185,8 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
-   </tr>
+	   </td>	  
+   </tr>   
    <tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="p112"></a>
@@ -197,7 +199,7 @@
 	   		  </center>
 	   </small>
 	   </td>
-   </tr>
+   </tr>         
 </table>
 <p>
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
@@ -206,7 +208,7 @@
        <td width="80%">
 	   His Tablets, described how the souls of God's Messengers and the company of the Concourse on high circumambulated His throne of sovereignty. Of course this is not a physical circling around such as could be seen in this life. It may be regarded as one of the many mysteries which surround the Supreme Manifestation of God. The early believers who had the inestimable bounty of attaining His presence sometimes witnessed supernatural events at one time or another through His special favours, events which completely overwhelmed their souls and which they recorded in their memoirs. But these may be considered as personal experiences only; they are not valid for others.<p>
 	   The story of Hájí Muhammad-Táhir and Nabíl falls into this category. They had the vision in which they saw the souls of the Prophets and the company of the Concourse on high circling around the Mansion at the time that Bahá'u'lláh ascended the throne of His sovereignty in that hallowed spot. But such a soul stirring experience is valid for those two privileged souls only: it can never be adduced as a conclusive proof of the station of Bahá'u'lláh. We have already discussed this subject in a previous volume:* miracles are not a proof of the authenticity of the Manifestation of God. If miracles take place, they are proof only for those who witness them. Bahá'u'lláh has explained that the proof of the sun is the sun itself; similarly, He states that the proof of the Manifestation of God is in the first place His own Self; in the second place, His Revelation; and for those who are in need of further proof, His words.<p>
-	   Those who attained the Presence of Bahá'u'lláh with pure hearts and spiritual vision had the bounty of being able to recognize Him through 'His own Self'. As a result of coming in contact with His Person these believers became a new creation completely detached from the things of this world, intoxicated by the wine of His presence and carried away into new realms of the spirit. They enjoyed such nearness to the Blessed Beauty that they became the intimates of His mysteries. Some of them saw
+	   Those who attained the Presence of Bahá'u'lláh with pure hearts and spiritual vision had the bounty of being able to recognize Him through 'His own Self'. As a result of coming in contact with His Person these believers became a new creation completely detached from the things of this world, intoxicated by the wine of His presence and carried away into new realms of the spirit. They enjoyed such nearness to the Blessed Beauty that they became the intimates of His mysteries. Some of them saw 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p113">113</a></center><p>
@@ -218,7 +220,7 @@
 	   glimpses of His hidden glory and power and were awestruck at the revelation of His supreme station.<p>
 	   <b>An Outpouring of Divine Bounty</b><p>
 	   The transfer of Bahá'u'lláh's residence to the Mansion of Bahjí begins a new and final chapter in His Ministry which constitutes one of the most glorious periods in His life. The King of Glory, the Supreme Manifestation of God, ascended the throne of His sovereignty, the spot which 'God hath ordained as the most sublime vision of mankind'. It was here that the majesty of Bahá'u'lláh and His grandeur were outwardly manifested to both friend and foe. And it was here that the climax of forty years of Revelation was consummated. The verses that streamed from His Pen and the Tablets which were revealed in the latter part of His life released a special potency through which the teachings and principles of His Faith were further enunciated in conjunction with the laws of the <i>Kitáb-i-Aqdas</i>, and through which their application to the building of His new world order became apparent.<p>
-	   The prodigious outpouring of the Word of God during Bahá'u'lláh's residence in the Mansion of Bahjí staggers the imagination. The rapidity with which His Tablets were revealed, the manner in which His amanuensis, Mírzá Áqá Ján, though devoid of a proper education, was empowered by Him to cope with recording His words at an amazing speed,* the zeal and enthusiasm with which several of His servants spent long hours every day in transcribing His Writings, all these resulted in the dissemination of innumerable Tablets unprecedented in their range and content during any period of His Ministry. Parallel with the revelation of divine verses, which released their creative energies within human society in general and the Bahá'í community in particular, was the inestimable bounty experienced by a considerable number of His devoted followers of attaining His presence in an atmosphere of freedom and delight. Those who
+	   The prodigious outpouring of the Word of God during Bahá'u'lláh's residence in the Mansion of Bahjí staggers the imagination. The rapidity with which His Tablets were revealed, the manner in which His amanuensis, Mírzá Áqá Ján, though devoid of a proper education, was empowered by Him to cope with recording His words at an amazing speed,* the zeal and enthusiasm with which several of His servants spent long hours every day in transcribing His Writings, all these resulted in the dissemination of innumerable Tablets unprecedented in their range and content during any period of His Ministry. Parallel with the revelation of divine verses, which released their creative energies within human society in general and the Bahá'í community in particular, was the inestimable bounty experienced by a considerable number of His devoted followers of attaining His presence in an atmosphere of freedom and delight. Those who 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p114">114</a></center><p>
@@ -239,7 +241,7 @@
 	   Since its beginnings in the Síyáh-Chál of Tihrán the outpouring of the Revelation of Bahá'u'lláh had continued at different periods. This latter part of His Ministry served to crown the inestimable bounties which God had chosen to bestow upon humanity in this Dispensation. Indeed, everything which needed to be revealed by God for humanity in this age has been revealed.<p>
 	   In a Tablet in honour of His Trustee, Hájí Abu'l-Hasan-i-Amín,<small><sup>8</sup></small>* Bahá'u'lláh states that the bounty of God has so encompassed the peoples of the world that the meanings and the inner meanings of every word, every statement and every mystery revealed by Him, have been divulged in this day.<p>
 	   It is interesting to note that for reasons that Bahá'u'lláh Himself has given,† He did not choose to reveal the laws of His Dispensation in the early days of His Ministry. Indeed, it was half-way through it that He revealed the Laws of the <i>Kitáb-i-Aqdas</i>. And even then He withheld their release to His followers for some time. The formulation of the laws of the <i>Kitáb-i-Aqdas</i>, however, enabled Him, in the latter part of His Ministry, to complete the structure of His all-encompassing Revelation through the revelation of the many important Tablets which streamed from His Pen. Shoghi Effendi describes this process in these words:<p>
-	   <blockquote>The formulation by Bahá'u'lláh, in His <a href="../../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a>, of the fundamental laws of His Dispensation was followed, as His Mission drew to a close, by the enunciation of certain precepts and principles which lie at the very core of His Faith, by the reaffirmation of truths He had previously proclaimed, by the elaboration and elucidation of some of the laws He had already laid down, by the revelation of further prophecies and warnings, and by the establishment of subsidiary ordinances designed to supplement the provisions of His Most Holy Book. These were recorded in unnumbered Tablets, which He continued to reveal until the last days of His earthly life, among which the '<a href="../../../Baha/TOB/p001-270TOB.html#para294">Ishráqát</a>' (Splendors), the '<a href="../../../Baha/TOB/p001-270TOB.html#para37">Bishárát</a>' (Glad</blockquote>
+	   <blockquote>The formulation by Bahá'u'lláh, in His <a href="../../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a>, of the fundamental laws of His Dispensation was followed, as His Mission drew to a close, by the enunciation of certain precepts and principles which lie at the very core of His Faith, by the reaffirmation of truths He had previously proclaimed, by the elaboration and elucidation of some of the laws He had already laid down, by the revelation of further prophecies and warnings, and by the establishment of subsidiary ordinances designed to supplement the provisions of His Most Holy Book. These were recorded in unnumbered Tablets, which He continued to reveal until the last days of His earthly life, among which the '<a href="../../../Baha/TOB/p001-270TOB.html#para294">Ishráqát</a>' (Splendors), the '<a href="../../../Baha/TOB/p001-270TOB.html#para37">Bishárát</a>' (Glad</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p116">116</a></center><p>
@@ -266,7 +268,7 @@
        <td>
 	   	   <FORM ACTION="p091-102Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -274,12 +276,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p118-144Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
