--- a/Baha'i/Others/ROB/V4/p118-144Ch08.html
+++ b/Baha'i/Others/ROB/V4/p118-144Ch08.html
@@ -231,8 +231,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p131">131</a></center><p>
 	   <hr>
-	   15. <i>Prayers and Meditations</i>, no. 176.<p>
-	   16. <i>ibid</i>. no. 183.<p>
+	   15. <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para898">no. 176</a>.<p>
+	   16. <i>ibid</i>. <a href="../../../Baha/PM/p003-340.html#para1021">no. 183</a>.<p>
 	   17. <i>Má'idiy-i-Ásamání</i>, vol. 9, p. 24.
 	   </small></td>
 </tr>
@@ -312,6 +312,8 @@
 	   * see vol. 1, pp. <a href="../V1/p053-070Ch05.html#p64">64</a>-6 and <a href="../V1/p105-152Ch09.html#p118">118</a>-19.<p>
 	   <hr>
 	   25. <i>Bihjatu's-Sudúr</i>, pp. 72-3.
+	   <hr>
+	   [The Supreme Manifestation of God] <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para407">p. 128</a>, <a href="../../../Baha/PM/p003-340.html#para903">p. 275</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p391-412Ch25.html#p406">p. 406</a>
 	   </small></td>
 </tr>
 <tr>
