--- a/Baha'i/Others/ROB/V4/p177-189Ch12.html
+++ b/Baha'i/Others/ROB/V4/p177-189Ch12.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p168-176Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p190-204Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -36,7 +36,7 @@
        <td width="80%"><center><img src="../Media/12.jpg" border="0" alt="12" align="middle"></center><p>
 	   <center><h2>The Light of Faith Reaches<br>India and Burma</h2></center><p>
 	   A number of outstanding believers had been travel teaching in Persia from the early days of the Faith. By the time Bahá'u'lláh entered the city of 'Akká, the Faith had also reached a few of the neighbouring countries and its light had illumined the hearts of some of their inhabitants. Towards the end of Bahá'u'lláh's Ministry, the Cause of God was introduced to fifteen countries, mainly the Islámic lands stretching from Turkmenistan in the east to Egypt and the Súdán in the west. Several teachers of the Cause travelled through these territories, among them some eminent Bahá'ís such as Nabíl-i-Akbar and Mírzá Abu'l-Fadl.<p>
-	   To the vast sub-continent of India, whose inhabitants were mainly non-Muslim, Bahá'u'lláh despatched the zealous, untiring and renowned travel-teacher Sulaymán Khán-i-Tunukábání, surnamed by Him Jamálu'd-Dín and usually referred to as Jamál Effendi. He came from the province of Mázindarán in northern Persia. His Bahá'í career began in Tihrán, where he had moved in order to obtain an important position in government circles. There he found the Faith and became an ardent believer. The fire of the love of Bahá'u'lláh began to burn brightly within his heart, so he changed his plans completely. The first thing he did was to dress as a dervish,* which was the most convenient appearance for
+	   To the vast sub-continent of India, whose inhabitants were mainly non-Muslim, Bahá'u'lláh despatched the zealous, untiring and renowned travel-teacher Sulaymán Khán-i-Tunukábání, surnamed by Him Jamálu'd-Dín and usually referred to as Jamál Effendi. He came from the province of Mázindarán in northern Persia. His Bahá'í career began in Tihrán, where he had moved in order to obtain an important position in government circles. There he found the Faith and became an ardent believer. The fire of the love of Bahá'u'lláh began to burn brightly within his heart, so he changed his plans completely. The first thing he did was to dress as a dervish,* which was the most convenient appearance for 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p177">177</a></center><p>
@@ -49,7 +49,7 @@
 	   When the time of his pilgrimage came to an end, he did not return to Persia, but instead travelled extensively and for a long time in the Ottoman territory. Being a man of culture and dressed as he was in the garb of a dervish, he hoped to become a centre of attraction for many souls in that vast country, so that he could teach the Faith to them.<p>
 	   Shaykh Kázim-i-Samandar* states that he met Sulaymán Khán in Istanbul in the year AH 1291 (AD 1874) when the latter was travelling around the country after his pilgrimage to the presence of Bahá'u'lláh. Samandar writes:<p>
 	   <blockquote>His {Sulaymán Khán's} intention in putting on the garb of a dervish was to be able to diffuse the divine fragrances and teach the Cause of the Lord of Revelation in those regions. Gradually, after his association with the public, he realized that these people for the time being did not have the capacity to embrace the Faith, and also his activities were not conducive to wisdom. Therefore he returned to 'Akká and attained the presence of the Blessed Perfection. From there he went to India...<small><sup>1</sup></small></blockquote>
-	   Some years before this episode, a few members of the Afnán family had established a trading company and later a printing press bearing the trade mark 'Násirí' in Bombay, India. This was the first printing press in the Bahá'í world to produce several volumes of Bahá'í writings. As a result of this enterprise Bombay became a place where Bahá'ís would congregate and to which Persian Bahá'í pilgrims travelled on their way to and from 'Akká. When the Afnáns realized that there was receptivity towards the Faith among the Indians, they sent a petition to Bahá'u'lláh for a Bahá'í teacher with knowledge and experience to go to India, and
+	   Some years before this episode, a few members of the Afnán family had established a trading company and later a printing press bearing the trade mark 'Násirí' in Bombay, India. This was the first printing press in the Bahá'í world to produce several volumes of Bahá'í writings. As a result of this enterprise Bombay became a place where Bahá'ís would congregate and to which Persian Bahá'í pilgrims travelled on their way to and from 'Akká. When the Afnáns realized that there was receptivity towards the Faith among the Indians, they sent a petition to Bahá'u'lláh for a Bahá'í teacher with knowledge and experience to go to India, and 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p178">178</a></center><p>
@@ -102,11 +102,14 @@
        <td>
 	   and radiance of spirit had left an abiding impression on him. Siyyid Mustafá listened with great interest to Sulaymán Khán's explanations about religion in general and the Bahá'í Faith in particular. He became highly attracted to the Person of Bahá'u'lláh as he sat spellbound, listening to the discourses of his new-found teacher. Soon Siyyid Mustafá recognized the truth of the Cause and became filled with excitement at the knowledge that the Supreme Manifestation of God had at last revealed Himself to mankind. He was the most illustrious of Jamal Effendi's converts in the sub-continent of India. He served the Cause with distinction, mainly in Burma, and was posthumously named by Shoghi Effendi, the Guardian of the Faith, as one of the Hands of the Cause of God. After his death, Shoghi Effendi, in a cable to the Bahá'í world, referred to him as a 'DISTINGUISHED PIONEER' of the Faith of Bahá'u'lláh, a 'STAUNCH AND HIGH-MINDED SOUL', the record of whose 'SUPERB SERVICES IN BOTH TEACHING AND ADMINISTRATIVE FIELDS SHED LUSTRE ON BOTH THE HEROIC AND FORMATIVE AGES OF BAHÁ'Í DISPENSATION', and whose resting-place 'SHOULD BE REGARDED FOREMOST SHRINE IN THE COMMUNITY OF BURMESE BELIEVERS'.<p>
 	   For over ten years Sulaymán Khán travelled throughout the sub-continent; then he departed for the Holy Land to attain the presence of Bahá'u'lláh. He was accompanied by two believers whom he had brought under the shadow of the Cause of God. He also took with him a young lad to work as a domestic helper in the household of Bahá'u'lláh. He attained the presence of His Lord in 'Akká for the third time, but his sojourn in the Holy Land was cut very short, for Bahá'u'lláh instructed him to return to India and continue his teaching exploits in that vast country. This time he again took one of the believers to accompany him in his travels, arriving back in India on the eve of Naw-Rúz* 1888.<p>
-	   In some of his letters Siyyid Mustafáy-i-Rúmí has named a number of countries and provinces that were visited by Sulaymán Khán. In each place he had sown the seeds of the Message of Bahá'u'lláh in many hearts. Among the places he visited were
+	   In some of his letters Siyyid Mustafáy-i-Rúmí has named a number of countries and provinces that were visited by Sulaymán Khán. In each place he had sown the seeds of the Message of Bahá'u'lláh in many hearts. Among the places he visited were 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p182">182</a></center><p>
 	   * 21 March, the Bahá'í New Year.
+	   <hr>
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -205,7 +208,7 @@
        <td>
 	   	   <FORM ACTION="p168-176Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -213,12 +216,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p190-204Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
