--- a/Baha'i/Others/ROB/V4/p239-256Ch17.html
+++ b/Baha'i/Others/ROB/V4/p239-256Ch17.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p227-238Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p257-273Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -113,7 +113,7 @@
 	   <blockquote>in his room as his guest when the Blessed Beauty arrived and honoured us with His presence. He asked Nabíl in an amused tone, 'Whose prayer beads are those that you have imprisoned here?' Nabíl said, 'They belong to Áqá Táhir...'</blockquote>
 	   Remarks such as this on trivial matters always helped the believers to feel relaxed in Bahá'u'lláh's presence. Otherwise no one could have uttered one word when standing face to face with the One whom he knew to be the Supreme Manifestation of God. Bahá'u'lláh enjoyed humour; indeed, one of the attributes of God is 'Humorist'. Sometimes Bahá'u'lláh would make humorous remarks to His companions, some of whom were well able to reciprocate in their humble way. Notable among His companions who had a great sense of humour were Zaynu'l-Muqarrabín and Mishkín-Qalam.* There was also Mírzá Ja'far-i-Yazdí.<p>
 	   Husayn-i-Áshchí† has recounted many stories about some of Bahá'u'lláh's humorous conversations with Mírzá Ja'far, who was working as a servant in Bahá'u'lláh's household. He was an erudite and learned divine from Yazd, and had been an outstanding mujtahid (doctor of Islámic law) in that city. When He embraced the Cause of Bahá'u'lláh, He renounced his high office, went to Baghdád, discarded his priestly attire and became a servant in the household of Bahá'u'lláh. He accompanied Him in His exiles and was engaged in service until the end of his life.‡ The following is a summary of Husayn-i-Áshchí's memoirs:<p>
-	   <blockquote>The Blessed Beauty used to spend much of His time in the countryside...From the mansion of Bahjí He often went to the Mansion of Mazra'ih, to the garden of Junaynih§ and the Garden of Ridván. On these occasions He spoke to the believers with delightful humour...Mírzá Ja'far was a high-ranking mujtahid...but was working as a domestic servant</blockquote>
+	   <blockquote>The Blessed Beauty used to spend much of His time in the countryside...From the mansion of Bahjí He often went to the Mansion of Mazra'ih, to the garden of Junaynih§ and the Garden of Ridván. On these occasions He spoke to the believers with delightful humour...Mírzá Ja'far was a high-ranking mujtahid...but was working as a domestic servant</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p244">244</a></center><p>
@@ -121,13 +121,16 @@
 	   † He was a cook in the household of Bahá'u'lláh. For further information see vol. 2, pp. <a href="../V2/p152-170Ch07.html#p169">169</a> and <a href="../V2/p397-421Ch19.html#p404">404</a>.<p>
 	   ‡ For further information, and the story of his revival after death, see vol. 1, p. <a href="../V1/p283-293Ch17.html#p290">290</a>.<p>
 	   § Situated on the north side of 'Akká. (A.T.)
+	   <hr>
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
        <td>
 	   <blockquote>...One day the Muftí of 'Akká, Shaykh 'Alíy-i-Mírí attained the presence of Bahá'u'lláh in the Mansion of Bahjí and was seeking enlightenment on some religious subjects. Mírzá Ja'far was also there attending to his domestic work. Bahá'u'lláh called him in and said, 'Come and answer the questions of the Muftí.' He resolved the questions so well that the Muftí was surprised at the extent of his knowledge and learning...Bahá'u'lláh often made humorous remarks to Mírzá Ja'far and he usually responded wittily. One day He said to him jokingly, 'Jináb-i-Mujtahid (your excellency, the Mujtahid) do you wish me to reveal to you some of your bad qualities?' Mírzá Ja'far's prompt reply was, 'No thank you.' His response, full of wit and humour, delighted the heart of Bahá'u'lláh.<p></blockquote>
 	   There is an interesting story about Mírzá Ja'far in the early days of the Faith in Yazd. Hájí Muhammad-Táhir-i-Málmírí has recorded this in his memoirs:<p>
-	   <blockquote>Áqá Mírzá Ja'far was an erudite divine of Islám. In his youth, he taught at a theological school...He left the school altogether when he embraced the Cause and became a very steadfast believer. In those days, the Ancient Beauty was in Baghdád. Knowing that He was living an austere life in that city, Mírzá Ja'far wished to provide some funds for the relief of His blessed Person. In the end he came up with a plan. There were many vases and other ornaments made of copper in the mosques of Yazd. He used to go to a mosque at night, climb to the upper chambers, dismantle the ornamental copper vessels which were hanging from the ceiling, and take them home. Little by little he stole similar vessels from several mosques. In the end he gathered nearly half a ton of these copper items...He then transported them to Ardikán* to the home of a certain Ustád Kázim, an ironmonger. There he cut the copper articles to pieces and eventually succeeded in selling the metal for seventy túmáns† in silver coins. He placed the silver inside a specially made leather cummerbund, tied it around his waist and set off on his journey on foot to</blockquote>
+	   <blockquote>Áqá Mírzá Ja'far was an erudite divine of Islám. In his youth, he taught at a theological school...He left the school altogether when he embraced the Cause and became a very steadfast believer. In those days, the Ancient Beauty was in Baghdád. Knowing that He was living an austere life in that city, Mírzá Ja'far wished to provide some funds for the relief of His blessed Person. In the end he came up with a plan. There were many vases and other ornaments made of copper in the mosques of Yazd. He used to go to a mosque at night, climb to the upper chambers, dismantle the ornamental copper vessels which were hanging from the ceiling, and take them home. Little by little he stole similar vessels from several mosques. In the end he gathered nearly half a ton of these copper items...He then transported them to Ardikán* to the home of a certain Ustád Kázim, an ironmonger. There he cut the copper articles to pieces and eventually succeeded in selling the metal for seventy túmáns† in silver coins. He placed the silver inside a specially made leather cummerbund, tied it around his waist and set off on his journey on foot to</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p245">245</a></center><p>
@@ -157,7 +160,7 @@
 	   One of the believers, a certain Mírzá Muhammad-Qulí, presented Bahá'u'lláh with an overcoat. In a Tablet<small><sup>8</sup></small> Bahá'u'lláh informed him that He had worn the coat for one day as a bounty on His part.<p>
 	   Hájí Muhammad 'Alíy-i-Afnán,‡ a cousin of the Báb, had sent a length of white flannel to 'Akká. According to a Tablet written in the handwriting of Mírzá Áqá Ján,<small><sup>9</sup></small> Bahá'u'lláh graciously accepted the gift from him and although since His departure from Baghdád He was in the habit of wearing coats made only of black flannel, He ordered a white one to be made as a token of His grace and favours towards the Afnán.<p>
 	   According to Hájí Muhammad-Táhir, Bahá'u'lláh would usually wear a long woollen upper garment and a woollen cloak; and in the summer, cotton garments.<p>
-	   These stories depicting some ordinary features of the life of
+	   These stories depicting some ordinary features of the life of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p247">247</a></center><p>
@@ -226,7 +229,7 @@
 	   O people! Act not treacherously in the matter of Huqúq'u'lláh and dispose not of it, except by His leave. Thus hath it been ordained in His Epistles as well as in this glorious Tablet.<p>
 	   Whoso dealeth dishonestly with God will in justice be exposed, and whoso fulfilleth the things he hath been commanded, divine blessings will descend upon him from the heaven of the bounty of his Lord, the Bestower, the Bountiful, the Most Generous, the Ancient of Days. Verily He desireth for you the things that are inscrutable to you at present, though the people themselves will readily discover them when their souls take their flight and the trappings of their earthly gaieties are rolled up. Thus warneth you the Author of the Preserved tablet.<small><sup>16</sup></small><p>
 	   </blockquote>
-	   It must be noted that in the above passage Bahá'u'lláh has merely set the rate of Huqúq at nineteen per cent. It is not meant that the minimum amount subject to Huqúq is one hundred mithqáls of gold; the minimum amount is the value of nineteen
+	   It must be noted that in the above passage Bahá'u'lláh has merely set the rate of Huqúq at nineteen per cent. It is not meant that the minimum amount subject to Huqúq is one hundred mithqáls of gold; the minimum amount is the value of nineteen 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p251">251</a></center><p>
@@ -246,7 +249,7 @@
 	   Bahá'u'lláh was very anxious that no one should ever feel forced to pay the Huqúq. He instructed Hájí Abu'l-Hasan-i-Amín* the Trustee of the Huqúq, and other eminent Bahá'ís, not to accept money from anybody unless they were sure that the individual wished to give with the utmost joy and devotion. He also forbade the soliciting of Huqúq by the Trustees. In many of His Tablets Bahá'u'lláh has made such exhortations. To cite an example, the following is part of a Tablet revealed in honour of His Trustee Hájí Amín:<p>
 	   <blockquote>
 	   O Abu'l-Hasan:<p>
-	   May my Glory rest upon thee! Fix thy gaze upon the glory of the Cause. Speak forth that which will attract the hearts and the minds. To demand the Huqúq is in no wise permissible. This command was revealed in the Book of God for various necessary matters ordained by God to be dependent upon
+	   May my Glory rest upon thee! Fix thy gaze upon the glory of the Cause. Speak forth that which will attract the hearts and the minds. To demand the Huqúq is in no wise permissible. This command was revealed in the Book of God for various necessary matters ordained by God to be dependent upon 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -262,8 +265,8 @@
 	   <blockquote>material means. Therefore, if someone, with utmost pleasure and gladness, nay with insistence, wisheth to partake of this blessing, thou mayest accept. Otherwise, acceptance is not permissible.<small><sup>19</sup></small></blockquote>
 	   The following passage from the Writings of Bahá'u'lláh will shed further light on this subject:<p>
 	   <blockquote>For a number of years Huqúq was not accepted. How numerous the offerings that on reaching Our presence were returned to the donors, because they were not needed then. However, in recent years We have, in view of the exigencies of the times, accepted the payment of the Huqúq, but have forbidden solicitation thereof. Everyone must have the utmost regard for the dignity of the Word of God and for the exaltation of His Cause. Were a person to offer all the treasures of the earth at the cost of debasing the honour of the Cause of God, were it even less than a grain of mustard, such an offering would not be permissible. All the world hath belonged and will always belong to God. If one spontaneously offereth Huqúq with the utmost joy and radiance it will be acceptable, and not otherwise. The benefit of such deeds reverteth unto the individuals themselves. This measure hath been ordained in view of the necessity for material means, for 'averse is God from putting aught into effect except through its means'. Thus instructions were given to receive the Huqúq.<small><sup>20</sup></small></blockquote>
-	   In one of His Tablets<small><sup>21</sup></small> Bahá'u'lláh states that there is no act more reprehensible than to beg for funds in the name of God.<p>
-	   A special responsibility concerning the Huqúq'u'lláh was placed upon the Hands of the Cause.* As we have already stated, Bahá'u'lláh always insisted that no one should be solicited to pay the Huqúq'u'lláh, and even that payment should not be accepted unless the individual was willing to observe the Huqúq with the utmost joy. In His Tablets to the Hands, Bahá'u'lláh often gives the details of the numerous occasions on which He refused to accept donations from individuals as the Faith did not
+	   In one of His Tablets<small><sup>21</sup></small> Bahá'u'lláh states that there is no act more reprehensible than to beg for funds in the name of God.<p> 
+	   A special responsibility concerning the Huqúq'u'lláh was placed upon the Hands of the Cause.* As we have already stated, Bahá'u'lláh always insisted that no one should be solicited to pay the Huqúq'u'lláh, and even that payment should not be accepted unless the individual was willing to observe the Huqúq with the utmost joy. In His Tablets to the Hands, Bahá'u'lláh often gives the details of the numerous occasions on which He refused to accept donations from individuals as the Faith did not 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p253">253</a></center><p>
@@ -279,7 +282,7 @@
 	   need financial assistance at that time. He urges them to uphold the standards of detachment, dignity and magnanimity which their Lord has always displayed.<p>
 	   In a Tablet to Ibn-i-Asdaq,<small><sup>22</sup></small> Bahá'u'lláh describes in the words of His amanuensis how at one time the King of the Martyrs* had felt that the means of subsistence for the Holy Family and the believers in the Holy Land were inadequate. He had dispatched therefore Jamál-i-Burújirdí to the province of Khurásán to solicit the friends for the payment of the Huqúq. As soon as the news of this reached the Holy Land Bahá'u'lláh immediately issued strict intructions to withdraw from this action. The verses that were revealed by Him on that occasion forbidding Jamál to proceed on his mission were charged with supreme authority and might.<p>
 	   On receiving these instructions, Jamál, that egotistical teacher of the Faith,† was hurt. He wrote a letter to Mírzá Áqá Jan, Bahá'u'lláh's amanuensis, and complained that his services had never been accepted by, or pleasing to, Bahá'u'lláh. He indicated in this letter that a number of believers, all from Jewish background, had donated a certain sum of money with the utmost pleasure. If their contributions were to be refused, they would become disappointed. As a result of his petition Bahá'u'lláh ordered the acceptance of the sum, but at the same time made arrangements for all of it to be used in financing the teaching activities of a few chosen teachers of the Faith in Persia.<p>
-	   In the same Tablet Mírzá Áqá Ján gives further examples. When a few souls from Fárán‡ attained the presence of Bahá'u'lláh, they presented a sum of money to Him in payment of the Huqúq. He graciously accepted their offering but then returned the full amount to them as a gift. He had done the same to many others and Mírzá Áqá Ján mentions the names of some of them in this Tablet. He further states that all throughout this
+	   In the same Tablet Mírzá Áqá Ján gives further examples. When a few souls from Fárán‡ attained the presence of Bahá'u'lláh, they presented a sum of money to Him in payment of the Huqúq. He graciously accepted their offering but then returned the full amount to them as a gift. He had done the same to many others and Mírzá Áqá Ján mentions the names of some of them in this Tablet. He further states that all throughout this 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p254">254</a></center><p>
@@ -319,7 +322,7 @@
        <td>
 	   	   <FORM ACTION="p227-238Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -327,12 +330,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p257-273Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
