--- a/Baha'i/Others/ROB/V4/p351-367Ch23.html
+++ b/Baha'i/Others/ROB/V4/p351-367Ch23.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p329-350Ch22.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p368-390Ch24.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -52,14 +52,14 @@
 	   order had built a monastery over it in the expectation that Christ, returning in the glory of the Father, would bless it with His presence. It is not surprising that, like the German Templers, none of the monks who were present at the time recognized the station of Bahá'u'lláh when He visited that place. Bahá'u'lláh pitched His Tent in close proximity to the monastery and there revealed the Tablet of Carmel. It is well known that in the future a Mashriqu'l-Adhkár (Bahá'í House of Worship) will be built on that site.<p>
 	   This Tablet contains significant allusions to the establishment of the World Centre of the Faith and is considered its charter. Before the revelation of this Tablet there was apparently nothing in Bahá'u'lláh's Writings concerning the international Seat of His world-encircling order. From the moment He blessed the mountain of God with His footsteps, mysterious forces were released for the creation of the spiritual and administrative centre of the Faith, a centre from which the world-vivifying energies latent within His Revelation will flow to mankind.<p>
 	   In the Tablet of Carmel Bahá'u'lláh enters into a dialogue with the mountain, Carmel. This is not unusual; in other Tablets He has similarly addressed certain cities or locations--for instance, His address to the Land of Tá (Tihrán),* or His dialogue with Jerusalem as revealed in the <i>Lawh-i-Aqdas</i>.† The dialogue in the Tablet of Carmel is at once beautiful, profound and moving. The sublime picture that Bahá'u'lláh has portrayed begins with Himself as He directs His footsteps towards Carmel; the first act in this divine scene is when the voices of 'all created things' are heard addressing Carmel. Then comes Carmel's jubilant words in thanksgiving to its Lord and finally Bahá'u'lláh's response. The opening paragraph of this Tablet raises the curtain of this exalted spectacle.<p>
-	   <blockquote>All glory be to this Day, the Day in which the fragrances of mercy have been wafted over all created things, a Day so blest</blockquote>
+	   <blockquote>All glory be to this Day, the Day in which the fragrances of mercy have been wafted over all created things, a Day so blest</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p352">352</a></center><p>
 	   * see vol. 1, pp. <a href="../V1/p045-052Ch04.html#p46">46</a>-9.<p>
 	   † see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para9">pp. 9</a>-17.
 	   <hr>
-	   ["All glory be to this Day..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para3">p. 3</a>
+	   ["All glory be to this Day..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para3">p. 3</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -134,7 +134,7 @@
 	   <hr>
 	   8. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para32">XI</a>.
 	   <hr>
-	   ["Call out to Zion..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para6">p. 4</a>
+	   ["Call out to Zion..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para6">p. 4</a> 
 	   </small></td>
 </tr>
 <tr>
@@ -149,7 +149,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p358">358</a></center><p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para254">p. 84</a>.<p>
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para254">p. 84</a>.<p> 
 	   10. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para32">XI</a>.
 	   <hr>
 	   ["Hasten forth and circumambulate..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para6">p. 4</a>
@@ -161,7 +161,7 @@
 	   An eye-witness has explained that while Bahá'u'lláh was facing the East and 'Abdu'l-Bahá the West, the Tongue of Grandeur ssued instructions to the Master to arrange the transportation of the remains of the Báb from Persia to the Holy Land and their interment in a mausoleum below the clump of cypress trees at a spot which He indicated with His hand. Thus the initial step for this holy enterprise was undertaken by Bahá'u'lláh Himself.<p>
 	   It took almost eight years before 'Abdu'l-Bahá was able to arrange the transfer of the remains of the Báb. The casket containing the sacred remains arrived in 'Akká on 31 January 1899. Ten years later on Naw-Rúz* 1909 'Abdu'l-Bahá, with His own hands and in the presence of believers from East and West, placed the wooden casket inside a marble sarcophagus which was lowered into the vault built especially for it inside one of the six rooms constructed by 'Abdu'l-Bahá for this purpose.† In a Tablet He conveyed this good news to the believers in these words:<p>
 	   <blockquote>The most joyful tidings is this, that the holy, the luminous body of the Báb...after having for sixty years been transferred from place to place, by reason of the ascendancy of the enemy, and from fear of the malevolent, and having known neither rest nor tranquillity has, through the mercy of the Abhá Beauty, been ceremoniously deposited, on the day of Naw-Rúz, within the sacred casket, in the exalted Shrine on Mt. Carmel...By a strange coincidence, on that same day of Naw-Rúz a cablegram was received from Chicago, announcing that the believers in each of the American centers had elected a delegate and sent to that city...and definitely decided on the site and construction of the Mashriqu'l-Adhkár.<small><sup>12</sup></small></blockquote>
-	   In 1948 preparations were begun by Shoghi Effendi for the
+	   In 1948 preparations were begun by Shoghi Effendi for the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p359">359</a></center><p>
@@ -170,6 +170,8 @@
 	   <hr>
 	   11. <i>God Passes By</i>, p. 194.<p>
 	   12. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 276.
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -238,9 +240,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p363b"></a>
 	   	   <img src="i/363b.jpg" width="425" height="300" border="0" align="middle" ALT="THE GROVE OF CYPRESS TREES">
@@ -257,9 +259,9 @@
    <tr>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>	  
    </tr>
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="p364"></a>
 	   	   <img src="i/364.jpg" width="525" height="325" border="0" align="middle" ALT="THE BAHÁ'Í WORLD CENTRE">
@@ -271,8 +273,8 @@
 	   		  </center>
 	   </small>
 	   </td>
-   </tr>
-
+   </tr>   
+   
 </table>
 <p>
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
@@ -320,7 +322,7 @@
        <td>
 	   	   <FORM ACTION="p329-350Ch22.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -328,12 +330,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p368-390Ch24.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
