--- a/Baha'i/Others/ROB/V4/p391-412Ch25.html
+++ b/Baha'i/Others/ROB/V4/p391-412Ch25.html
@@ -199,7 +199,7 @@
 	   Being a two-faced man, he used to send a copy to the Master on a weekly basis as a friendly gesture, and offered to publish any statement that the Master might wish to make, an offer which was totally ignored.<p>
 	   In 1896 one of Jamálu'd-Dín's supporters in Persia succeeded in assassinating Násiri'd-Dín Sháh. From then on events moved very fast. Three men, including Shaykh Ahmad and Mírzá Áqá Khán, were sent back to Persia by order of the Sultán of Turkey, and were mercilessly beheaded in Tabríz by order of the Crown Prince, Muhammad-'Alí Mírzá, for committing acts of treason against their country. Thus the machinations of the Azalís in Constantinople received their death blow. Jamálu'd-Dín escaped the net and died a year later.<p>
 	   <b>Hájí Mírzá Siyyid Hasan (Afnán-i-Kabír)</b><p>
-	   The sufferings and pain that this lengthy episode, stretching over almost a decade, inflicted upon Bahá'u'lláh is evident from the contents of many of His Tablets. For instance, the accusations against Afnán-i-Kabír described above are mentioned by Bahá'u'lláh in the following passages from <i>Epistle to the Son of the Wolf</i>:<p>
+	   The sufferings and pain that this lengthy episode, stretching over almost a decade, inflicted upon Bahá'u'lláh is evident from the contents of many of His Tablets. For instance, the accusations against Afnán-i-Kabír described above are mentioned by Bahá'u'lláh in the following passages from <i>Epistle to the Son of the Wolf</i>:<p>	   
 	   <blockquote>
 	   ...In the Great City (Constantinople) they have roused a considerable number of people to oppose this Wronged One. Things have come to such a pass that the officials in that city have acted in a manner which hath brought shame to both the government and the people. A distinguished siyyid, whose well-known integrity, acceptable conduct, and commercial reputation, were recognized by the majority of fair-minded men, and who was regarded by all as a highly honored merchant, once visited Beirut. In view of his friendship for this Wronged One they telegraphed the Persian Dragoman informing him that this siyyid, assisted by his servant, had stolen a sum of money and other things and gone to 'Akká. Their design in this matter was to dishonor this Wronged One...This Wronged One, however, beseemeth the one true God to graciously assist every one in that which beseemeth these days.<small><sup>13</sup></small><p>
 	   </blockquote>
@@ -272,6 +272,8 @@
 	   * For further information see vol. 1, pp. <a href="../V1/p045-052Ch04.html">45</a>-6.<p>
 	   <hr>
 	   15. <i>Memorials of the Faithful</i>, pp. 21-2.
+	   <hr>
+	   [The Supreme Manifestation of God] <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para407">p. 128</a>, <a href="../../../Baha/PM/p003-340.html#para903">p. 275</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p118-144Ch08.html#p136">p. 136</a>
 	   </small></td>
 </tr>
 <tr>
