--- a/Baha'i/Others/ROB/V4/p413-424Ch26.html
+++ b/Baha'i/Others/ROB/V4/p413-424Ch26.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p391-412Ch25.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p425-428Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 	   <blockquote>
 	   As attested by the Most Great Branch,* nine months before this most grievous event--His ascension--Bahá'u'lláh had voiced His desire to depart from this world. During these nine months, from the tone of His exhortations and remarks to those friends who attained His presence it became increasingly apparent that the end of His earthly life was approaching. He seemed to be arranging the affairs with a sense of urgency. But He never spoke openly about the approaching end of His life.<p>
 	   On the eve of Sunday, the eleventh of the month of Shavvál 1309 AH (8 May 1892), fifty days after Naw-Rúz, He contracted a fever, though He did not mention it to anyone. The following morning a number of the friends attained His presence. Late in the afternoon the fever was intensified. In the evening only one of the companions who had an urgent demand was admitted to His presence. On Monday (the second day of His illness) only one of the friends was admitted. On Tuesday this helpless servant was given the honour of an audience with His blessed Person. At noon He summoned me to His presence alone and spoke to me for about half an hour, sometimes seated and sometimes pacing up and down. He vouchsafed unto me His infinite bounties and His exalted utterances reached the acme of perfection.<p>
-	   I wish I had known that this was going to be my last
+	   I wish I had known that this was going to be my last 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -58,6 +58,8 @@
 	   * During Bahá'u'lláh's Ministry 'Abdu'l-Bahá was known by several titles, including Áqá (Master) and the Most Great Branch. The designation 'Abdu'l-Bahá (Servant of Bahá) was adopted by Himself after the ascension of His Father. (A.T.)<p>
 	   <hr>
 	   1. <i>Hidden Words</i>, Persian no. <a href="../../../Baha/HiddenWords.html#persian15">15</a>.
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -102,6 +104,8 @@
 	   § For these verses see vol. 3, pp. <a href="../V3/p371-399Ch17.html">371</a>-2. (A.T.)<p>
 	   <hr>
 	   2. Ishráq Khávarí, <i>Ayyám-i-Tis'ih</i>, pp. 399-406.
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -123,7 +127,7 @@
        <td>
 	   <blockquote>men and the advancement of the nations. From the moment Thou didst mount Thy throne at the hour of dawn on the 2nd on Muharram 1233 (12 November 1817) until Thy ascension to the Realms of Eternity, eight hours after sunset on the 2nd of Dhi'l-Qa'dih 1309 (29 May 1892) a period of seventy-seven years less two months according to the lunar calendar...Thou wert at all times, at day and at night, each month and each year, the cause of the exaltation of mankind. No needy suppliant who had set his heart toward Thee was turned back from the door of Thy generosity without vouchsafing unto him supreme felicity and goodly gifts, and no sorrowful destitute was sent out of Thy All-glorious presence except that Thou didst bestow upon him blissful joy and ample hope. And now far be it from Thee not to relieve me from my dreadful woes, and lead me to the abode of a never-ending felicity. Thou art God and there is no God save Thee.<small><sup>4</sup></small></blockquote>
 	   Nabíl, who was asked by 'Abdu'l-Bahá to select from the Writings of Bahá'u'lláh those passages which constitute the text of the Tablet of Visitation, which nowadays is usually recited in the Shrine of Bahá'u'lláh and the Báb, was inconsolable after the ascension of his Lord. To the ordeal of separation from his Beloved was added soon afterwards a far more grievous blow--the violation of the Covenant by 'Abdu'l-Bahá's brothers; which although it had not been made public at that time was clearly discernible to those who were close to the Holy Family. Nabíl could no longer bear the agony of those cruel and tempestuous days. He took his own life by drowning himself in the sea a few months after the ascension of Bahá'u'lláh.*<p>
-	   During His illness Bahá'u'lláh summoned the members of His family to His bedside, bade His last farewell to them and assured them that in a special document entrusted to 'Abdu'l-Bahá He had clearly directed their steps in the service of the Cause. The document referred to was His Will and Testament, designated by Himself <i>'Kitáb-i-'Ahdí</i> (The Book of My Covenant).† On the
+	   During His illness Bahá'u'lláh summoned the members of His family to His bedside, bade His last farewell to them and assured them that in a special document entrusted to 'Abdu'l-Bahá He had clearly directed their steps in the service of the Cause. The document referred to was His Will and Testament, designated by Himself <i>'Kitáb-i-'Ahdí</i> (The Book of My Covenant).† On the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p419">419</a></center><p>
@@ -131,13 +135,15 @@
 	   † The full text of the <i>Kitáb-i-'Ahdí</i>, or, as it is usually called, the <i>Kitáb-i-'Ahd</i> (Book of the Covenant), is translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para588">pp. 219</a>-23.<p>
 	   <hr>
 	   4. Ishráq Khávarí, <i>Ayyám-i-Tis'ih</i>, pp. 404-5.
+	   <hr>
+	   [Tablet of Visitation], <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para975">p. 310</a>
 	   </small></td>
 </tr>
 <tr>
        <td>
 	   morning of the ninth day after the ascension, in the presence of nine witnesses chosen from amongst members of His family and friends, this document in Bahá'u'lláh's own handwriting was read aloud by Áqá Ridáy-i-Qannád,* and in the afternoon of the same day it was read again by Majdu'd-Dín† in the Holy Tomb in the presence of a large number of friends. There was now no shadow of doubt as who the Centre of the Covenant was. But alas, the fire of jealousy which had been smouldering in the hearts of 'Abdu'l-Bahá's unfaithful brothers over a long period of time now burst into flame. This, coupled with the lust for leadership of Mírzá Muhammad-'Alí, the Arch-breaker of the Covenant of Bahá'u'lláh, created a severe crisis in the fortunes of the Faith.<p>
 	   The signs of the violation of the Covenant appeared on the actual day of the ascension. The body of Bahá'u'lláh was awaiting interment when His sons secretly launched their treacherous schemes to rob the Centre of the Covenant of His legitimate successorship which was explicitly conferred upon Him by Bahá'u'lláh Himself. A detailed account of this breaking of the Covenant is beyond the scope of this book. It is, however, the hope of the present author to produce, God willing, one or two volumes on the Covenant of Bahá'u'lláh as a sequel to the four volumes of <i>The Revelation of Bahá'u'lláh</i>. The study of the <i>Kitáb-i-'Ahd</i> with all its implications will also be carried out in these forthcoming volumes.<p>
-	   With the ascension of Bahá'u'lláh the most momentous and the most fertile period in the history of religion was terminated. The spiritual energies for the advancement of humanity were so intense that even during His own Ministry, a mere forty years, their creative power began to exert their influence not only upon
+	   With the ascension of Bahá'u'lláh the most momentous and the most fertile period in the history of religion was terminated. The spiritual energies for the advancement of humanity were so intense that even during His own Ministry, a mere forty years, their creative power began to exert their influence not only upon 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p420">420</a></center><p>
@@ -200,7 +206,7 @@
        <td>
 	   	   <FORM ACTION="p391-412Ch25.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -208,12 +214,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p425-428Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
