--- a/Baha'i/Others/ROB/V4/p214-226Ch15.html
+++ b/Baha'i/Others/ROB/V4/p214-226Ch15.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p205-213Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p227-238Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -41,7 +41,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p1">1</a></center><p>
 	   * A full translation of this Tablet is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para162">pp. 57</a>-80.<p>
-	   † For a further discussion on this subject see above pp. <a href="p011-032Ch02.html#p27">27</a>-8.<p>
+	   † For a further discussion on this subject see above pp. <a href="p011-032Ch02.html#p27">27</a>-8.<p> 
 	   ‡ see above, pp. <a href="p118-144Ch08.html#p125">125</a>-39.
 	   </small></td>
 </tr>
@@ -51,13 +51,13 @@
 	   Furthermore, in the <i>Kalimát-i-Firdawsíyyih</i> Bahá'u'lláh disapproves of 'living in seclusion or practising asceticism',‡ saying that these practices are 'sprung from the loins of idle fancy', or 'begotten of the womb of superstition', and that they 'ill beseem men of knowledge'. He also refers to the mystics,§ 'some of whom indulge in that which leadeth to idleness and seclusion'. He condemns their way of life which 'lowereth man's station and maketh him swell with pride', and teaches that 'man must bring forth fruit. One who yieldeth no fruit is, in the words of the Spirit [Jesus], like unto a fruitless tree, and a fruitless tree is fit but for fire.'<p>
 	   Most of these teachings extracted from the <i>Kalimát-i-Firdawsíyyih</i> have already been mentioned in other Tablets and quoted in more detail in this book.<p>
 	   In this Tablet Bahá'u'lláh authorizes the members of the Universal House of Justice 'to take counsel together regarding those things which have not been outwardly revealed in the Book', and commands them 'to ensure the protection and safeguarding of men, women and children'.<p>
-	   Bahá'u'lláh has revealed the laws of this Dispensation, which must last for at least one thousand years. These laws are described
+	   Bahá'u'lláh has revealed the laws of this Dispensation, which must last for at least one thousand years. These laws are described 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p215">215</a></center><p>
 	   * For an explanation of the need for punishment see vol. 3, pp. <a href="../V3/p275-307Ch13.html#p294">294</a>-7.<p>
 	   † see vol. 3, pp. <a href="../V3/p322-342Ch15.html#p326">326</a>-331.<p>
-	   ‡ see vol. 2, pp. <a href="../V2/p029-054Ch02.html#p34">34</a>-7, and above, pp. <a href="p161-167Ch10.html#p162">162</a>-3.<p>
+	   ‡ see vol. 2, pp. <a href="../V2/p029-054Ch02.html#p34">34</a>-7, and above, pp. <a href="p161-167Ch10.html#p162">162</a>-3.<p> 
 	   § see vol. 2, pp. <a href="../V2/p001-028Ch01.html#p24">24</a>-8.
 	   </small></td>
 </tr>
@@ -67,7 +67,7 @@
 	   Expounding the greatness of His Revelation, Bahá'u'lláh reveals these thought-provoking words in the <i>Kalimát-i-Firdawsíyyih</i>:<p>
 	   <blockquote>O people of God! Great is the Day and mighty the Call! In one of Our Tablets We have revealed these exalted words: 'Were the world of the spirit to be wholly converted into the sense of hearing, it could then claim to be worthy to hearken unto the Voice that calleth from the Supreme Horizon; for otherwise, these ears that are defiled with lying tales have never been, nor are they now fit to hear it.' Well is it with them that hearken; and woe betide the wayward.<small><sup>1</sup></small></blockquote>
 	   These words clearly indicate that no one in this world is worthy to embrace the Cause of God. How immeasurable is the gap between the immensity of the 'world of the spirit...wholly converted into the sense of hearing', and the feebleness of a human being. How vast is the difference between the glory of God's heavenly Revelation and the human's attachments to earthly things. That some have recognized the station of Bahá'u'lláh in this Day and embraced His faith is due to the bounty of God and not man's worthiness. Creation has come into being through the bounty of God, and not through His justice; so has His Revelation. Man, a finite being, does not merit such a glorious gift from his Creator. To this a Bahá'í testifies every day when he performs one of the Obligatory Prayers:<p>
-	   <blockquote>...O God, my God! Thy forgiveness hath emboldened me, and Thy mercy hath strengthened me, and Thy call hath</blockquote>
+	   <blockquote>...O God, my God! Thy forgiveness hath emboldened me, and Thy mercy hath strengthened me, and Thy call hath</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p216">216</a></center><p>
@@ -88,7 +88,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p217">217</a></center><p>
 	   <hr>
-	   2. Long Obligatory Prayer, <i>Prayers and Meditations</i> no. 183.<p>
+	   2. Long Obligatory Prayer, <i>Prayers and Meditations</i> <a href="../../../Baha/PM/p003-340.html#para1017">no. 183</a>.<p> 
 	   3. Quoted by May Maxwell, <i>An Early Pilgrimage</i>, p. 40.
 	   </small></td>
 </tr>
@@ -131,13 +131,13 @@
 	   And then he makes this statement which may only be described as astounding:<p>
 	   <blockquote>Were the Point of the Bayán* present in this day and should He, God forbid, hesitate to acknowledge this Cause, then the very blessed words which have streamed forth from the wellspring of His Own Bayán would apply to Him. He saith, and His word is the truth, 'Lawful is it for Him Whom God will make manifest to reject him who is the greatest on earth.' Say, O ye that are bereft of understanding! Today that Most Exalted Being is proclaiming: 'Verily, verily, I am the first to adore Him.' How shallow is the fund of men's knowledge and how feeble their power of perception. Our Pen of Glory beareth witness to their abject poverty and to the wealth of God, the Lord of all worlds.<small><sup>10</sup></small></blockquote>
 	   He also addresses Mírzá Yahyá, His unfaithful brother, in these challenging words reminding him of earlier days when he used to take down the words of Bahá'u'lláh and with His permission disseminate them among the Bábís in his own name as the leader of the Bábí community:<p>
-	   <blockquote>Say: O Yahyá (Azal), produce a single verse, if thou dost possess divinely-inspired knowledge. These words were formerly spoken by My Herald Who at this hour proclaimeth: 'Verily, verily, I am the first to adore Him.' Be fair, O My brother. Art thou able to express thyself when brought face to face with the billowing ocean of Mine utterance? Canst thou unloose thy tongue when confronted with the shrill voice of My Pen? Hast thou any power before the revelations of Mine omnipotence? Judge thou fairly, I adjure thee by God, and call to mind when thou didst stand in the presence of this Wronged One and We dictated to thee the verses of God, the</blockquote>
+	   <blockquote>Say: O Yahyá (Azal), produce a single verse, if thou dost possess divinely-inspired knowledge. These words were formerly spoken by My Herald Who at this hour proclaimeth: 'Verily, verily, I am the first to adore Him.' Be fair, O My brother. Art thou able to express thyself when brought face to face with the billowing ocean of Mine utterance? Canst thou unloose thy tongue when confronted with the shrill voice of My Pen? Hast thou any power before the revelations of Mine omnipotence? Judge thou fairly, I adjure thee by God, and call to mind when thou didst stand in the presence of this Wronged One and We dictated to thee the verses of God, the</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p220">220</a></center><p>
 	   * The Báb. (A. T.)<p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para232">pp. 74</a>-5.<p>
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para232">pp. 74</a>-5.<p> 
 	   10. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para233">p. 75</a>.
 	   </small></td>
 </tr>
@@ -147,14 +147,14 @@
 	   Another person, a Muslim, who is rebuked by Bahá'u'lláh in this Tablet is Hájí Mullá Hádíy-i-Sabzavárí, a noted philosopher of the time and a renowned poet, who died in 1873. He was the author of several books on divine philosophy, and his works are available both in verse and prose. In one of his poems Mullá Hádí boasts about his own spiritual perception. It is believed that Moses heard the voice of God from the Burning Bush; Mullá Hádí states in his poem that nowadays there is no Moses around and the voice 'I am God' can be heard from every tree. It is because of this claim that Bahá'u'lláh in several of His Tablets condemned this man as worthless, as he had failed to hearken to His voice in this great Day of God. He thus refers to him in the <i>Kalimát-i-Firdawsíyyih</i>:<p>
 	   <blockquote>
 	   The sage of Sabzivár hath said: 'Alas! Attentive ears are lacking, otherwise the whisperings of the Sinaic Bush could be heard from every tree.' In a Tablet to a man of wisdom who had made enquiry as to the meaning of Elementary Reality, We addressed this famous sage in these words: 'If this saying is truly thine, how is it that thou hast failed to hearken unto the Call which the Tree of Man hath raised from the loftiest heights of the world? If thou didst hear the Call yet fear and the desire to preserve thy life prompted thee to remain heedless to it, thou art such a person as hath never been nor is worthy of mention; if thou hast not heard it, then thou are bereft of the sense of hearing.' In brief, such men are they whose words are the pride of the world, and whose deeds are the shame of the nations.<p>
-	   Verily We have sounded the Trumpet which is none other than My Pen of Glory, and lo, mankind hath swooned away before it, save them whom God pleaseth to deliver as a token of His grace. He is the Lord of bounty, the Ancient of Days.<small><sup>12</sup></small><p>
+	   Verily We have sounded the Trumpet which is none other than My Pen of Glory, and lo, mankind hath swooned away before it, save them whom God pleaseth to deliver as a token of His grace. He is the Lord of bounty, the Ancient of Days.<small><sup>12</sup></small><p> 
 	   </blockquote>
 	   A person who is remembered with affection in the <i>Kalimát-i-Firdawsíyyih</i> is Mírzá Abu'l-Qásim-i-Faráháni, entitled Qá'im-Maqám. He is not named, but is referred to in this Tablet as
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p221">221</a></center><p>
 	   <hr>
-	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para235">pp. 75</a>-6.<p>
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para235">pp. 75</a>-6.<p> 
 	   12. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para175">p. 61</a>.
 	   </small></td>
 </tr>
@@ -162,7 +162,7 @@
        <td>
 	   'Prince of the City of Statesmanship and Literary Accomplishment'. He was a contemporary of Bahá'u'lláh's father and a faithful friend of his, highly acclaimed at the court of Fath-'Alí Sháh* for his wisdom, uprightness, benevolence, courage and dignity as well as his learning and knowledge. He was a highly gifted writer whose compositions are considered to be among the best in the literary field. As a statesman he was very capable; 'Abdu'l-Bahá has described him as foremost in the whole of Persia. He became Prime Minister in 1821 and continued to hold this position until the reign of Muhammad Sháh (1834-48). In a country where injustice and corruption were rife he upheld standards of justice and honesty. As a result his enemies conspired against him, poisoned the mind of the monarch and made him believe that his Prime Minister was about to overthrow him. These falsehoods gained credibility and Muhammad Sháh became filled with fear. In 1835 Qá'im-Maqám was executed in Tihrán by his orders.<p>
 	   In the Writings of Bahá'u'lláh one can hardly find a word of praise directed at any of the authorities in Persia. The tribute He has paid to Qá'im-Maqám is unique, and indicative of the greatness of this man. Bahá'u'lláh finds that no actions on the part of Muhammad Sháh were more heinous than the banishment of the Báb to the fortress of Máh-Kú and the murder of Qá'im-Maqám.<p>
-	   But God rewards His faithful servants in mysterious ways. One of Qá'im-Maqám's grandsons, Mírzá Áqá Khán (entitled Qá'im-Maqámí) had inherited all the outstanding qualities of his paternal grandfather. He was the embodiment of dignity, benevolence and courage, a man of culture and erudition. He grew up in the luxurious home of his ancestors in Arák. On one of his teaching trips, Siyyid Asadu'lláh-i-Qumí, a renowned teacher of the Faith,† arrived in Arák. The father of Mírzá Áqá Khán, being an open-minded and liberal person, invited Siyyid
+	   But God rewards His faithful servants in mysterious ways. One of Qá'im-Maqám's grandsons, Mírzá Áqá Khán (entitled Qá'im-Maqámí) had inherited all the outstanding qualities of his paternal grandfather. He was the embodiment of dignity, benevolence and courage, a man of culture and erudition. He grew up in the luxurious home of his ancestors in Arák. On one of his teaching trips, Siyyid Asadu'lláh-i-Qumí, a renowned teacher of the Faith,† arrived in Arák. The father of Mírzá Áqá Khán, being an open-minded and liberal person, invited Siyyid 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p222">222</a></center><p>
@@ -193,7 +193,7 @@
 	   <small>
 	   		  <center>
 			  		  MÍRZÁ ABU'L-QÁSIM-I-FARÁHÁNI, QÁ'IM-MAQÁM	(left) and ÁQÁ KHÁN-I-QÁ'IM-MAQÁMÍ (right)<p>
-					  Áqá Khán was the grandson of Qá'im-Maqám and an eminent Bahá'í
+					  Áqá Khán was the grandson of Qá'im-Maqám and an eminent Bahá'í	
 	   		  </center>
 	   </small>
 	   </td>
@@ -223,13 +223,13 @@
 </tr>
 <tr>
        <td>
-	   <blockquote>O thou who hast turned thy gaze towards My face! In these days there occurred that which hath plunged Me into dire sadness. Certain wrong-doers who profess allegiance to the Cause of God committed such deeds as have caused the limbs of sincerity, of honesty, of justice, of equity to quake. One known individual to whom the utmost kindness and favour had been extended perpetrated such acts as have brought tears to the eye of God. Formerly We uttered words of warning and premonition, then for a number of years We kept the matter secret that haply he might take heed and repent. But all to no purpose. In the end he bent his energies upon vilifying the Cause of God before the eyes of all men. He tore the veil of fairness asunder and felt sympathy neither for himself nor for the Cause of God. Now, however, the deeds of certain individuals have brought sorrows far more grievous than those which the deeds of the former had caused. Beseech thou God, the True One, that He may graciously enable the heedless to retract and repent. Verily He is the Forgiving, the Bountiful, the Most Generous. <sup><small>16</small></sup></blockquote>
+	   <blockquote>O thou who hast turned thy gaze towards My face! In these days there occurred that which hath plunged Me into dire sadness. Certain wrong-doers who profess allegiance to the Cause of God committed such deeds as have caused the limbs of sincerity, of honesty, of justice, of equity to quake. One known individual to whom the utmost kindness and favour had been extended perpetrated such acts as have brought tears to the eye of God. Formerly We uttered words of warning and premonition, then for a number of years We kept the matter secret that haply he might take heed and repent. But all to no purpose. In the end he bent his energies upon vilifying the Cause of God before the eyes of all men. He tore the veil of fairness asunder and felt sympathy neither for himself nor for the Cause of God. Now, however, the deeds of certain individuals have brought sorrows far more grievous than those which the deeds of the former had caused. Beseech thou God, the True One, that He may graciously enable the heedless to retract and repent. Verily He is the Forgiving, the Bountiful, the Most Generous. <sup><small>16</small></sup></blockquote> 
 	   The 'one known individual' mentioned above is a certain Muhammad-'Alíy-i-Isfahání, not to be confused with Siyyid Muhammad-i-Isfahání, the Anti-Christ of Bahá'u'lláh's Revelation. A brief account of this episode is given in <a href="p391-412Ch25.html#p395">Chapter 25</a>.<p>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p226">226</a></center><p>
 	   <hr>
-	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para171">pp. 59</a>-60.
+	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para171">pp. 59</a>-60.	   
 	   <p></small></td>
 </tr>
 </table>
@@ -239,7 +239,7 @@
        <td>
 	   	   <FORM ACTION="p205-213Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -247,12 +247,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p227-238Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
