--- a/Baha'i/Others/ROB/V4/p441-445Biblio.html
+++ b/Baha'i/Others/ROB/V4/p441-445Biblio.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p432-440Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p446-462Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -65,7 +65,7 @@
 	   <i>Ishráqát</i> (A compilation of the Tablets of Bahá'u'lláh). India: AH 1310 (AD 1892-3).<p>
 	   <i><a href="../../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a></i>. Extracts translated by Shoghi Effendi in <i>Synopsis and Codification of the Kitáb-i-Aqdas, the Most Holy Book of Bahá'u'lláh</i>. Haifa: Bahá'í World Centre, 1973.<p>
 	   <i><a href="../../../Baha/KI/Cover.html">Kitáb-i-Íqán</a></i>. <i>The Book of Certitude</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1974.<p>
-	   <i>Prayers and Meditations by Bahá'u'lláh</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
+	   <i><a href="../../../Baha/PM/Cover.html">Prayers and Meditations by Bahá'u'lláh</a></i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
 	   <i><a href="../../../Baha/TSVATFV.html">The Seven Valleys and the Four Valleys</a></i>. Translated by Marzieh Gail and All-Kuli Khán. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1978.<p>
 	   <i><a href="../../../Baha/TOB/Cover.html">Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</a></i>. Compiled by the Research Department of the Universal House of
 	   </blockquote>
@@ -96,7 +96,7 @@
 	   MAXWELL, MAY. <i>An Early Pilgrimage</i>. Oxford: George Ronald, 1969.<p>
 	   MEHRÁBKHÁNÍ, RÚHU'LLÁH. <i>Sharh-i-Ahvál-i-Mírzá 'Abu'l-Fadl-i-Gulpáygání</i> (Biography of Mírzá Abu'l-Fadl of Gulpáygán). Írán: BE 131 (AD 1975).<p>
 	   MU'AYYAD, DR HABÍB. <i>Khátirát-i-Habíb</i> (Memoirs of Habíb). Tihrán: 1961.<p>
-	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932.<p>
+	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932.<p> 
 	   <i>Nafahát-i-Quds</i>. A short compilation of Tablets of Bahá'u'lláh and 'Abdu'l-Bahá. New Delhi: Bahá'í Publishing Trust, n.d.<p>
 	   NATIONAL ARCHIVES COMMITTEE OF THE NATIONAL SPIRITUAL ASSEMBLY OF THE BAHÁ'ÍS OF ÍRÁN. Series of unpublished compilations of the Writings of Bahá'u'lláh. Nos. 15, 18, 19, 22, 23, 27, 28, 31, 32, 38, 41, 73.<p>
 	   <i>Qur'án</i>, see <i>Koran</i>.<p>
@@ -133,7 +133,7 @@
        <td>
 	   	   <FORM ACTION="p432-440Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -141,12 +141,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p446-462Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
